src/test/deca/context/invalid/our_tests/jb-wrong-argType.deca
// Description:
//    Wrong type of arguments
//
// Resultats:
//    Should throw Contextual error (rule 3.73-3.74)
//
// Historique:
//    cree le 22/01/2017

class A {
    void f(int a, float b) {}
}

{
    A a = new A();
    a.f(1.0, 1);
    a.f(null, null);
}
